remove validate endpoint, clean up code, generate a unix/linux verifiable shasum file
