# docs/swagger.yml
@@ -1077,7 +1077,7 @@ paths:
       tags:
         - "Report"
       summary: "Retrieves a tar.gz file for the deployments and details reports."
-      description: "The tar.gz contains the reports in both the .csv and .json format as well as a file containing the data integrity hashes for each report in .json format."
+      description: "The tar.gz contains the reports in both the .csv and .json format as well as a SHA256 file that contains a data integrity hash for each report."
       operationId: "downloadReports"
       produces:
       - "application/gzip"
@@ -1095,27 +1095,6 @@ paths:
           description: "Reports id not found"
         401:
           description: "Not authorized"
-  /reports/validate/:
-    put:
-      tags:
-        - "Report"
-      summary: "Validate a reports authenticity against its hash."
-      description: "Validate a report against its associated hash."
-      operationId: "validateReports"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "The report to verify and the hash to verify it against"
-        required: true
-        schema:
-          $ref: "#/definitions/ValidateReport"
-      responses:
-        200:
-          description: "Report authenticity verified - either valid or invalid"
-        424:
-          description: "Report could not be validated due to missing dependency"
   /token/:
     post:
       tags:
@@ -2600,17 +2579,3 @@ definitions:
         type: "string"
         description: "The username"
         example: "admin"
-  ValidateReport:
-    type: "object"
-    required:
-      - report
-      - hash
-    properties:
-      report:
-        type: "string"
-        example: "The contents of a deployments or details report."
-        description: "The report to validate"
-      hash:
-        type: "string"
-        description: "The hash to validate the report against."
-        example: "9ac1223bcaa57d75a78022cff787bbeba3c0a54416ecef27d7c7301e93d3770d"
