# quipucords/api/views.py
@@ -20,10 +20,9 @@ from api.details_report.view import details
 from api.insights_report.view import insights
 from api.merge_report.view import (async_merge_reports,
                                    sync_merge_reports)
-from api.reports.view import reports
 from api.scan.view import ScanViewSet, jobs
 from api.scanjob.view import ScanJobViewSet
-from api.status.view import status
 from api.user.view import UserViewSet
 from api.user.token_view import QuipucordsExpiringAuthTokenView
-from api.validate_report.view import validate_hash
+from api.status.view import status
+from api.reports.view import reports
